--- a/proiect/indicatoare/indicatoare temporare/pagina8.html
+++ b/proiect/indicatoare/indicatoare temporare/pagina8.html
@@ -95,9 +95,9 @@
                 <p> Alte pericole</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru12.png" alt="" style="width:100%;"></a>
+                <a href=""><img src="lucru12.jpg" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
-                <p>Prioritate pentru circulația din sens invers</p>
+                <p>Depășirea autovehiculelor, cu excepția motocicletelor fără ataș, intezisă</p>
             </div>
             <div class="box2">
                 <a href=""><img src="lucru13.png" alt="" style="width:100%;"></a>
