--- a/proiect/indicatoare individuale/pagina1.html
+++ b/proiect/indicatoare individuale/pagina1.html
@@ -5,6 +5,7 @@
         <title> Proiect </title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="../indicatoare/style3.css">
+        <script src="https://kit.fontawesome.com/0070301605.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="header1">
