stergere panouri in plus

--- a/proiect/indicatoare/indicatoare temporare/pagina8.html
+++ b/proiect/indicatoare/indicatoare temporare/pagina8.html
@@ -49,57 +49,57 @@
         </div>
         <div class="text-box2">
             <div class="box2">
-                <a href=""><img src="lucru1.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_1.html"><img src="lucru1.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_1.html" class="vezi-buton2">vezi detalii</a>
                 <p> Drum îngustat în ambele sensuri</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru2.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_2.html"><img src="lucru2.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_2.html" class="vezi-buton2">vezi detalii</a>
                 <p> Drum îngustat în ambele sensuri</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru3.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_3.html"><img src="lucru3.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_3.html" class="vezi-buton2">vezi detalii</a>
                 <p>Drum îngustat pe partea dreaptă</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru4.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_4.html"><img src="lucru4.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_4.html" class="vezi-buton2">vezi detalii</a>
                 <p> Acostament periculos</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru5.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_5.html"><img src="lucru5.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_5.html" class="vezi-buton2">vezi detalii</a>
                 <p>Drum cu denivelări</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru6.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_6.html"><img src="lucru6.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_6.html" class="vezi-buton2">vezi detalii</a>
                 <p> Drum lunecos</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru7.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_7.html"><img src="lucru7.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_7.html" class="vezi-buton2">vezi detalii</a>
                 <p> Împroșcare cu pietriș</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru8.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_8.html"><img src="lucru8.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_8.html" class="vezi-buton2">vezi detalii</a>
                 <p> Lucrări</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru9.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_9.html"><img src="lucru9.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_9.html" class="vezi-buton2">vezi detalii</a>
                 <p> Semafoare</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru10.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_10.html"><img src="lucru10.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_10.html" class="vezi-buton2">vezi detalii</a>
                 <p> Circulație în ambele sensuri</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru11.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_1.html"><img src="lucru11.png" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
                 <p> Alte pericole</p>
             </div>
