--- a/proiect/indicatoare/indicatoare temporare/pagina8.html
+++ b/proiect/indicatoare/indicatoare temporare/pagina8.html
@@ -99,148 +99,148 @@
                 <p> Circulație în ambele sensuri</p>
             </div>
             <div class="box2">
-                <a href="../../indicatoare individuale/8_1.html"><img src="lucru11.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_11.html"><img src="lucru11.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_11.html" class="vezi-buton2">vezi detalii</a>
                 <p> Alte pericole</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru12.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_12.html"><img src="lucru12.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_12.html" class="vezi-buton2">vezi detalii</a>
                 <p>Prioritate pentru circulația din sens invers</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru13.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_13.html"><img src="lucru13.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_13.html" class="vezi-buton2">vezi detalii</a>
                 <p>Limitare de viteză</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru14.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_14.html"><img src="lucru14.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_14.html" class="vezi-buton2">vezi detalii</a>
                 <p> Sfârșitul tuturor restricțiilor</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru15.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_15.html"><img src="lucru15.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_15.html" class="vezi-buton2">vezi detalii</a>
                 <p> Sfârșitul interdicției de a depăși</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru16.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_16.html"><img src="lucru16.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_16.html" class="vezi-buton2">vezi detalii</a>
                 <p>Deviere termporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru17.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_17.html"><img src="lucru17.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_17.html" class="vezi-buton2">vezi detalii</a>
                 <p> Deviere temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru18.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_18.html"><img src="lucru18.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_18.html" class="vezi-buton2">vezi detalii</a>
                 <p> Deviere temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru19.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_19.html"><img src="lucru19.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_19.html" class="vezi-buton2">vezi detalii</a>
                 <p> Deviere temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru20.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_20.html"><img src="lucru20.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_20.html" class="vezi-buton2">vezi detalii</a>
                 <p> Denivelare față de banda anterioară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru21.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_21.html"><img src="lucru21.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_21.html" class="vezi-buton2">vezi detalii</a>
                 <p> Îngustare temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru22.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_22.html"><img src="lucru22.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_22.html" class="vezi-buton2">vezi detalii</a>
                 <p> Îngustare temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru23.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_23.html"><img src="lucru23.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_23.html" class="vezi-buton2">vezi detalii</a>
                 <p> Abatere temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru24.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_24.html"><img src="lucru24.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_24.html" class="vezi-buton2">vezi detalii</a>
                 <p> Abatere temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru25.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_25.html"><img src="lucru25.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_25.html" class="vezi-buton2">vezi detalii</a>
                 <p> Abatere temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru26.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_26.html"><img src="lucru26.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_26.html" class="vezi-buton2">vezi detalii</a>
                 <p> Terminarea abaterii temporare</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru27.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_27.html"><img src="lucru27.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_27.html" class="vezi-buton2">vezi detalii</a>
                 <p> Îngustarea temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru28.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_28.html"><img src="lucru28.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_28.html" class="vezi-buton2">vezi detalii</a>
                 <p>Îngustarea temporară</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru29.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_29.html"><img src="lucru29.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_29.html" class="vezi-buton2">vezi detalii</a>
                 <p>Presemnalizarea rutei ocolitoare</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru30.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_30.html"><img src="lucru30.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_30.html" class="vezi-buton2">vezi detalii</a>
                 <p>Presemnalizarea rutei ocolitoare</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru31.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_31.html"><img src="lucru31.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_31.html" class="vezi-buton2">vezi detalii</a>
                 <p>Presemnalizarea rutei ocolitoare</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru32.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_32.html"><img src="lucru32.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_32.html" class="vezi-buton2">vezi detalii</a>
                 <p>Marcaje rutiere</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru33.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_33.html"><img src="lucru33.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_33.html" class="vezi-buton2">vezi detalii</a>
                 <p>Semnalizarea unui rulaj care se deplasează rulând</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru34.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_34.html"><img src="lucru34.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_34.html" class="vezi-buton2">vezi detalii</a>
                 <p>Succesiune de puncte de lucru</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru35.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_35.html"><img src="lucru35.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_35.html" class="vezi-buton2">vezi detalii</a>
                 <p>Presemnalizarea unui sector cu circulație alternantă</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru36.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_36.html"><img src="lucru36.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_36.html" class="vezi-buton2">vezi detalii</a>
                 <p>Presemnalizarea unui sector cu circulație alternantă</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru37.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_37.html"><img src="lucru37.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_37.html" class="vezi-buton2">vezi detalii</a>
                 <p>Lucrări de tratamente a suprafeței părții carosabile</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru38.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_38.html"><img src="lucru38.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_38.html" class="vezi-buton2">vezi detalii</a>
                 <p>Presemnalizare lucrări pe străzi</p>
             </div>
             <div class="box2">
-                <a href=""><img src="lucru39.png" alt="" style="width:100%;"></a>
-                <a href="" class="vezi-buton2">vezi detalii</a>
+                <a href="../../indicatoare individuale/8_39.html"><img src="lucru39.png" alt="" style="width:100%;"></a>
+                <a href="../../indicatoare individuale/8_39.html" class="vezi-buton2">vezi detalii</a>
                 <p>Marcaje temporare pentru semnalizarea lucrărilor în zona drumului public</p>
             </div>
         </div>
