--- a/proiect/indicatoare/indicatoare de orientare/pagina4.html
+++ b/proiect/indicatoare/indicatoare de orientare/pagina4.html
@@ -124,7 +124,7 @@
                 <p>Traseu de urmat pentru anumite categorii de autovehicule</p>
             </div>
             <div class="box2">
-                <a href=""><img src="orientare16.png" alt="" style="width:100%;"></a>
+                <a href=""><img src="orientare16.jpg" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
                 <p> Traseu de urmat pentru un anumit tip de autovehicule</p>
             </div>
@@ -189,9 +189,9 @@
                 <p> Direcția spre localitatea indicată</p>
             </div>
             <div class="box2">
-                <a href=""><img src="orientare29.png" alt="" style="width:100%;"></a>
+                <a href=""><img src="orientare29.jpg" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
-                <p> Direcție spre autostrada indicată</p>
+                <p> Direcția spre localitățile indicate</p>
             </div>
             <div class="box2">
                 <a href=""><img src="orientare30.png" alt="" style="width:100%;"></a>
