--- a/proiect/indicatoare/marcaje longitudinale/pagina12.html
+++ b/proiect/indicatoare/marcaje longitudinale/pagina12.html
@@ -51,27 +51,27 @@
             <div class="box2">
                 <a href=""><img src="long1.png" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
-                <p> Marcaje longitudinale</p>
+                <p>Marcaj de separare a sensurilor de circulaţie format dintr-o linie discontinuă simplă. Marcaj de delimitare a părţii carosabile cu linie discontinuă</p>
             </div>
             <div class="box2">
                 <a href=""><img src="long2.png" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
-                <p> Marcaje longitudinale</p>
+                <p>Marcaj de separare a sensurilor de circulaţie format dintr-o linie continuă simplă. Marcaj de delimitare a părţii carosabile cu linie discontinuă</p>
             </div>
             <div class="box2">
                 <a href=""><img src="long3.png" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
-                <p>Marcaje longitudinale</p>
+                <p>Marcaj de separare a sensurilor de circulaţie format dintr-o linie continuă dublă. Marcaj de delimitare a benzilor de circulaţie de acelaşi sens cu linie discontinuă</p>
             </div>
             <div class="box2">
                 <a href=""><img src="long4.png" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
-                <p>Marcaje longitudinale</p>
+                <p>Marcaj de separare a sensurilor de circulaţie format dintr-o linie continuă, dublată de una discontinuă. Marcaj de delimitare a părţii carosabile cu linie continuă</p>
             </div>
             <div class="box2">
                 <a href=""><img src="long5.png" alt="" style="width:100%;"></a>
                 <a href="" class="vezi-buton2">vezi detalii</a>
-                <p>Marcaje longitudinale</p>
+                <p>Marcaj pentru benzi cu circulaţia reversibilă</p>
             </div>
             <div class="box2">
                 <a href=""><img src="long6.png" alt="" style="width:100%;"></a>
