--- a/proiect/indicatoare individuale/7_52.html
+++ b/proiect/indicatoare individuale/7_52.html
@@ -43,39 +43,39 @@
         <div class="container1">
                <div class="panel">
               <div class="panel-heading text-centre">
-              <strong>Drum îngustat în ambele sensuri </strong>
+              <strong>Zonă cu risc ridicat de accident</strong>
               </div>
              <div class="panel-body">
               <div class="row1"> 
                 <div class="column" style="max-width: 10%;"></div>
                   <div class="column">
-                      <img src="../indicatoare/indicatoare-index/5.jpg" alt="" style="width:90%;">
+                      <img src="../indicatoare/indicatoare-index/11.jpg" alt="" style="width:90%;">
                   </div>
                   <div class="text">
-                  <p> Indicatoarele rutiere pe fond galben au caracter temporar și se întâlnesc pe sectoarele de drum unde se execută lucrări pe partea carosabilă.</p>
-                  <p> Indicatorul se amplasează la 100-200 de metri de locul în care sectorul de drum începe să se îngusteze pe ambele părți cu cel puțin jumătate de metru.</p>
-                <p> La întâlnirea acestui indicator, conducătorul auto este obligat să reducă viteza, iar manevrele de oprire, staționare, mers înapoi și întoarcere sunt interzise. Manevra de depășire este permisă, dar datorită îngustării drumului, există spațiu lateral suficient doar pentru depășirea bicicletelor, mopedelor sau motocicletelor fără ataș. </p>
-                <p> Pe sectoarele de drum îngustat, unde nu au loc să circule două vehicule, unul pe lângă celălalt, prioritatea va fi reglementă prin indicatoarele „Prioritate față de circulația din sens invers” și „Prioritate pentru circulația din sens invers”. </p>
-            </div>
+                <p> 
+                    Indicatorul rutier reprezinta un sector de drum cu lungimea de maximum un kilometru, pe care, într-o perioadă de 5 ani consecutivi, s-au înregistrat minimum 10 accidente grave de circulație, soldate cu cel putin 10 persoane decedate sau rănite grav.
+                </p>
+                <p>
+                    La întalnirea indicatorului se recomandă reducerea vitezei de deplasare, sporirea atenției și evitarea efectuarii oricărei manevre riscante.
+                </p>
+                  </div>
               </div>
               <div class="row1">
                 <div class="column"></div>
                 <div class="column" style="max-width: 100%;">
-                <img src="../indicatoare/indicatoare temporare/lucru1.png" alt="" style="width:70%; vertical-align: middle;">
+                <img src="../indicatoare/indicatoare avertizare/avertizare52.jpg" alt="" style="width:70%; vertical-align: middle;">
               </div>
               <div>
-
               </div>
            </div>
-
               </div>
               <div class="panel-footer">
                 <div class="row1">
                     <div class="column" style="max-width: 50%;">
-                        <a href="7_52.html" class="btn" style="float: left;">Previous</a>
+                        <a href="7_51.html" class="btn" style="float: left;">Previous</a>
                     </div>
                     <div class="column" style="max-width: 50%;">
-                        <a href="8_2.html" class="btn" style="float: right;">Urmator</a>
+                        <a href="8_1.html" class="btn" style="float: right;">Urmator</a>
                     </div>
                 </div>
               </div>
