--- a/proiect/indicatoare/indicatoare avertizare/pagina7.html
+++ b/proiect/indicatoare/indicatoare avertizare/pagina7.html
@@ -303,6 +303,11 @@
                 <a href="" class="vezi-buton2">vezi detalii</a>
                 <p>Trecere la nivel cu cale ferată dublă, fără bariere</p>
             </div>
+            <div class="box2">
+                <a href=""><img src="avertizare52.jpg" alt="" style="width:100%;"></a>
+                <a href="" class="vezi-buton2">vezi detalii</a>
+                <p>Zona cu risc ridicat de accidente</p>
+            </div>
     </section>
     <div class="footer">
         <div class="footer-details">
